--- a/src/blocks/single-airdatepicker/single-airdatepicker.pug
+++ b/src/blocks/single-airdatepicker/single-airdatepicker.pug
@@ -1,7 +1,6 @@
 mixin single-datepicker()
     div(class='single-datepicker')
-        input(type='text'
-            data-range='true'
+        input(data-range='true'
             data-multiple-dates-separator=' - '
             placeholder='ДД.ММ.ГГГГ'
             id='single-range')
