--- a/src/components/feedback/feedback.scss
+++ b/src/components/feedback/feedback.scss
@@ -70,6 +70,7 @@
       font-size: 16px;
       font-weight: 500;
       line-height: 32px;
+      width: 230px;
     }
     &__button {
       width: 70px;
