--- a/src/components/info-room/info-room.scss
+++ b/src/components/info-room/info-room.scss
@@ -188,6 +188,9 @@
       font-size: 13px;
       margin-top: 20px;
     }
+    &__title{
+      font-size: 19px;
+    }
     & .bullet-list__item {
       font-size: 12px;
       padding: 1px 0 0 1.3em;
