--- a/src/components/room-page/room-page.pug
+++ b/src/components/room-page/room-page.pug
@@ -54,12 +54,18 @@ div(class='settings')
                 a(href='#')
                     i(class='fa fa-arrow-right')
             div(class='rooms__content')
+                    +set('luxe')
+                            span люкс
                     +card-room('carousel', [require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg')], 888, '9  990₽', ' в сутки', 145, ' Отзывов',  'room-card__decor')
                         +stars('--rating: 5')
+                        +set('luxe')
                     +card-room('carousel1', [require('./images/room2.jpg'), require('./images/room2.jpg'), require('./images/room2.jpg'), require('./images/room2.jpg')], 840,'9  900₽', ' в сутки', 65 , ' Отзывов', 'room-card__decor')
                         +stars('--rating: 4')
+                        +set('luxe')
+                            span люкс
                     +card-room('carousel2', [require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg')], 980, '8 500₽', ' в сутки', 35, ' Отзывов',  'room-card__decor')
                         +stars('--rating: 3')
+                        +set('luxe')
                     +card-room('carousel3', [require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg')], 856, '7 300₽', ' в сутки', 19,  ' Отзывов', 'room-card__decor')
                         +stars('--rating: 5')
                     +card-room('carousel4', [require('./images/room5.jpg'), require('./images/room5.jpg'), require('./images/room5.jpg'), require('./images/room5.jpg')], 740, '6 000₽',  ' в сутки', 44, ' Отзывов', 'room-card__decor')
