--- a/src/blocks/airdatepicker/airdatepicker.scss
+++ b/src/blocks/airdatepicker/airdatepicker.scss
@@ -1,8 +1,8 @@
-.date-dropdown{
-    display: flex;
+.date-dropdown {
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  &__range{
+  &__range {
     position: relative;
     display: inline-block;
     &::before {
@@ -10,12 +10,13 @@
       top: 25%;
       left: 78%;
       content: "";
-      padding: 5px;
-      box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
+      padding: 6px;
+      box-shadow: 3px -3px 0 0 rgba(31, 32, 65, 0.5) inset;
       display: inline-block;
       transform: rotate(-45deg);
       margin-left: 10px;
       color: rgba(31, 32, 65, 0.5);
+      cursor: pointer;
     }
   }
   &__input {
@@ -27,11 +28,14 @@
     border: none;
     border: 1px solid rgba(31, 32, 65, 0.25);
     padding-left: 20px;
+    font-size: 20px;
+    line-height: 65px;
+    color: rgba(31, 32, 65, 0.9);
     &::placeholder {
       font-style: normal;
       font-weight: normal;
       font-size: 1rem;
-      line-height: 55px;
+      line-height: 58px;
       color: rgba(31, 32, 65, 0.75);
     }
   }
