--- a/src/blocks/calculator/calculator.scss
+++ b/src/blocks/calculator/calculator.scss
@@ -14,6 +14,46 @@
     flex-wrap: wrap;
     justify-content: space-between;
   }
+  &__number {
+    font-style: normal;
+    font-family: "OpenSans-Bold";
+    font-size: 1.3rem;
+    margin-top: 5px;
+    color: #1f2041;
+  }
+  &__symbol {
+    font-size: 19px;
+    font-style: normal;
+    font-family: "OpenSans-Bold";
+    font-size: 1rem;
+    margin-top: 5px;
+    color: #1f2041;
+  }
+  &__luxe {
+    font-style: normal;
+    font-family: "Montserrat";
+    font-weight: bold;
+    font-size: 1.3rem;
+    margin-top: 5px;
+    color: #bc9cff;
+    margin-left: 10px;
+  }
+  &__cost {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.16rem;
+    color: rgba(31, 32, 65, 0.75);
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  &__per-day {
+    font-family: "Montserrat";
+    font-size: 1.16rem;
+    font-weight: bold;
+    font-style: normal;
+    color: rgba(31, 32, 65, 0.5);
+  }
   &__subtitles {
     display: flex;
     flex-direction: row;
