--- a/src/blocks/dropdown/dropdown.scss
+++ b/src/blocks/dropdown/dropdown.scss
@@ -19,14 +19,15 @@
     padding-left: 20px;
     &::after {
       content: "";
-      padding: 5px;
-      box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
+      padding: 6px;
+      box-shadow: 3px -3px 0 0 rgba(31, 32, 65, 0.5) inset;
       display: inline-block;
       transform: rotate(-45deg);
       color: rgba(31, 32, 65, 0.5);
       position: absolute;
       left: 21.5em;
       top: 1.2em;
+      cursor: pointer;
     }
   }
   &__input {
