--- a/src/blocks/input-subscription/input-subscription.scss
+++ b/src/blocks/input-subscription/input-subscription.scss
@@ -14,12 +14,16 @@
     border:  1.5px solid rgba(31, 32, 65, 0.25);
     border-radius: 4px;
     box-sizing: border-box;
+    font-size: 20px;
+    line-height: 65px;
+    color: rgba(31, 32, 65, 0.9);
     &::placeholder {
       font-style: normal;
       font-weight: normal;
       font-size: 24px;
       line-height: 18px;
       color: rgba(31, 32, 65, 0.35);
+      cursor: pointer;
     }
     &:hover,
     &:focus {
