--- a/src/blocks/little-dropdown/little-dropdown.scss
+++ b/src/blocks/little-dropdown/little-dropdown.scss
@@ -20,14 +20,15 @@
     color: rgba(31, 32, 65, 0.75);
     &:after {
       content: "";
-      padding: 5px;
-      box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
+      padding: 6px;
+      box-shadow: 3px -3px 0 0 rgba(31, 32, 65, 0.5) inset;
       display: inline-block;
       transform: rotate(-45deg);
       position: absolute;
-      top: 30px;
+      margin-top: 3px;
       left: 90%;
       color: rgba(31, 32, 65, 0.5);
+      cursor: pointer;
     }
   }
   &__input {
