--- a/src/blocks/single-airdatepicker/single-airdatepicker.scss
+++ b/src/blocks/single-airdatepicker/single-airdatepicker.scss
@@ -2,17 +2,18 @@
   position: relative;
   display: inline-block;
   &::before {
-    margin-top: 5px;
+    margin-top: 4px;
     position: absolute;
     top: 30%;
     left: 87%;
     content: "";
-    padding: 5px;
-    box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
+    padding: 6px;
+    box-shadow: 3px -3px 0 0 rgba(31, 32, 65, 0.5) inset;
     display: inline-block;
     transform: rotate(-45deg);
     margin-left: 10px;
     color: rgba(31, 32, 65, 0.5);
+    cursor: pointer;
   }
 }
 
