--- a/src/components/input-text/input-text.scss
+++ b/src/components/input-text/input-text.scss
@@ -6,6 +6,9 @@
   box-sizing: border-box;
   border-radius: 5px;
   padding: 0 20px 0 20px;
+  font-size: 20px;
+  line-height: 65px;
+  color: rgba(31, 32, 65, 0.9);
   &:hover,
   &:focus {
     border: 1.5px solid rgba(31, 32, 65, 0.5);
@@ -22,13 +25,6 @@
     color: rgba(31, 32, 65, 0.35);
   }
 }
-
-// @media only screen and (max-width: 600px) {
-//   .input-text {
-//     max-width: 440px;
-//   }
-// }
-
 
 @media only screen and (max-width: 450px) {
   .input-text {
