--- a/src/components/form-search/form-search.scss
+++ b/src/components/form-search/form-search.scss
@@ -43,6 +43,9 @@
       padding-bottom: 8px;
     }
   }
+  &__datepicker{
+    margin-bottom: 30px;
+  }
   &__dropdown .dd-button {
     margin-bottom: 20px;
   }
