--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -2,7 +2,7 @@ include ../logo/logo.pug
 mixin header(links)
   div(class='header')
     div(class='header__container')
-      +logo
+      +logo('logo logo_header')
       div(class='menu')
         label(for='drop' class='menu_toggle') 
           i(class='fa fa-bars' aria-hidden='true')
