--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -3,7 +3,11 @@
     background-repeat: no-repeat;
     width: 210px;
     height: 60px;
-    vertical-align: middle;
-    margin-top: 25px;
     display: inline-block;
+    &_header{
+      margin-top: 27px
+    }
+    &_footer{
+      margin-top: 20px;
+    }
   }
