--- a/src/pages/info-page/info-page.pug
+++ b/src/pages/info-page/info-page.pug
@@ -5,7 +5,7 @@ doctype html
 html
   head
     title my jade template
-    meta(name="viewport", content="width=, initial-scale=1.0")
+    meta(name="viewport", content="width=, initial-scale=1.0" charset="UTF-8" http-equiv="X-UA-Compatible")
   body
     +header( ['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
         +button( {name:'Войти', link: 'signin-page.html',className: 'btn__signin_header'})
