--- a/src/pages/signin-page/signin-page.pug
+++ b/src/pages/signin-page/signin-page.pug
@@ -6,7 +6,7 @@ doctype html
 html
   head
     title
-    meta(name="viewport", content="width=, initial-scale=1.0")
+    meta(name="viewport", content="width=, initial-scale=1.0" charset="UTF-8" http-equiv="X-UA-Compatible")
   body
     div(class='signin-page')
       +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
