--- a/src/blocks/calculator/calculator.scss
+++ b/src/blocks/calculator/calculator.scss
@@ -38,7 +38,15 @@
     color: #bc9cff;
     margin-left: 10px;
   }
+  &__datepicker{
+    margin-bottom: 30px;
+  }
   &__cost {
+    display: block;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
     font-family: "Montserrat";
     font-style: normal;
     font-weight: bold;
@@ -106,6 +114,11 @@
     margin-left: 1vw;
   }
   &__text {
+    display: block;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
     font-size: 1.1rem;
     &_tax{
       max-width: 300px;
