--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -1,9 +1,8 @@
 .card {
-  width: 490px;
+  width: 390px;
   background: #ffffff;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   border-radius: 7px;
-  margin: 20px 0;
 }
 
 .description {
@@ -33,6 +32,11 @@
   }
   &__price,
   &__feedback {
+    display: block;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
     font-family: "Montserrat";
     font-style: normal;
     font-weight: bold;
@@ -56,6 +60,9 @@
     font-weight: bold;
     font-style: normal;
     color: rgba(31, 32, 65, 0.5);
+  }
+  &__stars{
+    margin-top: 5px;
   }
 }
 
@@ -385,7 +392,6 @@
     background: #ffffff;
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
     border-radius: 7px;
-    margin: 20px 0;
   }
 
   .carousel {
