--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -4,7 +4,7 @@ mixin footer(footer, title, linkList1, linkList2, linkList3)
   footer(class='footer')
     div(class='footer__container')
         div(class='footer__column footer__column_slogan')
-          +logo
+          +logo('logo logo_footer')
           div
             p(class='footer__slogan')= footer.slogan
         div(class='footer__column')
