--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -29,6 +29,7 @@
   }
   &__items {
     padding: 0;
+    list-style: none;
   }
   &__item {
     padding: 28px 0;
@@ -87,6 +88,7 @@
   &__icons{
     display: flex;
     flex-direction: row;
+    list-style: none;
   }
   &__icon {
     height: 30px;
