--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -69,6 +69,11 @@
     letter-spacing: 0;
   }
   &__offer {
+    display: block;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
