--- a/src/pages/navigation-page/navigation-page.scss
+++ b/src/pages/navigation-page/navigation-page.scss
@@ -1,5 +1,6 @@
-.navigation__link{
-    background-color: #4CAF50;
+.navigation {
+  &__link {
+    background-color: #4caf50;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -9,4 +10,5 @@
     font-size: 16px;
     margin: 15px 20px;
     cursor: pointer;
+  }
 }
