--- a/src/pages/search-page/search-page.scss
+++ b/src/pages/search-page/search-page.scss
@@ -19,8 +19,10 @@
   }
 }
 @media only screen and (max-width: 1500px) {
-  .search-page__slogan {
-    left: 50%;
+  .search-page {
+    &__slogan {
+      left: 50%;
+    }
   }
 }
 
@@ -38,9 +40,11 @@
   }
 }
 @media only screen and (max-width: 400px) {
-  .search-page__background {
-    padding-top: 20px;
-    padding-left: 5px;
-    padding-bottom: 20px;
+  .search-page {
+    &__background {
+      padding-top: 20px;
+      padding-left: 5px;
+      padding-bottom: 20px;
+    }
   }
 }
