--- a/src/pages/signin-page/signin-page.scss
+++ b/src/pages/signin-page/signin-page.scss
@@ -1,16 +1,19 @@
-.signin-page__background {
-  min-height: 1010px;
-  background-image: url(../../components/images/bg_in.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  padding-top: 240px;
-  width: 100%;
+.signin-page {
+  &__background {
+    min-height: 1010px;
+    background-image: url(../../components/images/bg_in.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding-top: 240px;
+    width: 100%;
+  }
 }
-
 @media only screen and (max-width: 500px) {
-  .signin-page__background {
-    min-height: 600px;
-    padding-top: 40px;
+  .signin-page {
+    &__background {
+      min-height: 600px;
+      padding-top: 40px;
+    }
   }
 }
