--- a/src/pages/signup-page/signup-page.pug
+++ b/src/pages/signup-page/signup-page.pug
@@ -6,7 +6,7 @@ doctype html
 html
   head
     title
-    meta(name="viewport", content="width=, initial-scale=1.0")
+    meta(charset="UTF-8" name="viewport", content="width=, initial-scale=1.0" http-equiv="X-UA-Compatible")
   body
     div(class='signup-page')
       +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
