--- a/src/pages/signup-page/signup-page.scss
+++ b/src/pages/signup-page/signup-page.scss
@@ -1,8 +1,13 @@
-.signup-page__background {
-  min-height: 930px;
-  background-image: url(../../components/images/bg_in.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  padding: 40px 0;
+.signup-page {
+  &__background {
+    min-height: 930px;
+    background-image: url(../../components/images/bg_in.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    padding: 40px 0;
+  }
+  &__form{
+    margin: 0 auto;
+  }
 }
