--- a/src/pages/info-page/info-page.pug
+++ b/src/pages/info-page/info-page.pug
@@ -4,8 +4,11 @@ include ../../components/footer/footer.pug
 doctype html
 html
   head
-    title my jade template
-    meta(name="viewport", content="width=, initial-scale=1.0" charset="UTF-8" http-equiv="X-UA-Compatible")
+    title Hotel info page
+    meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    meta(name="application-name" content="Toxin Hotel")
   body
     +header( ['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
         +button( {name:'Войти', link: 'signin-page.html',className: 'btn__signin_header'})
