--- a/src/pages/search-page/search-page.pug
+++ b/src/pages/search-page/search-page.pug
@@ -5,8 +5,11 @@ include ../../components/footer/footer.pug
 doctype html
 html
   head
-    title
-    meta(name="viewport", content="width=, initial-scale=1.0" charset="UTF-8" http-equiv="X-UA-Compatible")
+    title Hotel search page
+    meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    meta(name="application-name" content="Toxin Hotel")
   body
     div(class='search-page')
       +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
