--- a/src/pages/signup-page/signup-page.pug
+++ b/src/pages/signup-page/signup-page.pug
@@ -5,8 +5,11 @@ include ../../components/button/button.pug
 doctype html
 html
   head
-    title
-    meta(charset="UTF-8" name="viewport", content="width=, initial-scale=1.0" http-equiv="X-UA-Compatible")
+    title Hotel signup page
+    meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    meta(name="application-name" content="Toxin Hotel")
   body
     div(class='signup-page')
       +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
