--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,8 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Document
+        meta(name="application-name" content="Toxin Hotel")
+        title Hotel
         link( rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
         link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
         script(src="src/index.js")
