divided room-page and info-room into components and fixed  class div on footer__gradient

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -43,7 +43,7 @@ mixin footer(footer, title, linkList1, linkList2, linkList3)
                       stop(stop-color='#8BA4F9' offset='0.45')
                       stop(stop-color='#BC9CFF' offset='0.6')
                       stop(stop-color='#BC9CFF' offset='0.9')
-                  div.div
+                  div(class='footer__gradient')
                     i(class='fab fa-twitter' aria-hidden='true')
               li(class='footer__icon')
                 a(href='#')
@@ -54,7 +54,7 @@ mixin footer(footer, title, linkList1, linkList2, linkList3)
                       stop(stop-color='#8BA4F9' offset='0.45')
                       stop(stop-color='#8BA4F9' offset='0.6')
                       stop(stop-color='#8BA4F9' offset='0.9')
-                  div.div
+                  div(class='footer__gradient')
                     i(class='fab fa-facebook-square' aria-hidden='true')
               li(class='footer__icon')
                 a(href='#')
@@ -65,5 +65,5 @@ mixin footer(footer, title, linkList1, linkList2, linkList3)
                       stop(stop-color='#8BA4F9' offset='0.45')
                       stop(stop-color='#8BA4F9' offset='0.6')
                       stop(stop-color='#8BA4F9' offset='0.9')
-                  div.div
+                  div(class='footer__gradient')
                     i(class='fab fa-instagram' aria-hidden='true')
