--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -97,16 +97,16 @@
     margin-right: 22px;
     cursor: pointer;
   }
-}
-//These styles need for the gradient
-.div {
-  display: flex;
-  font-size: 50px;
-  color: red;
-}
-
-.div svg * {
-  fill: url(#rg);
+  //These styles need for the gradient
+  &__gradient{
+    display: flex;
+    font-size: 50px;
+    color: red;
+    & svg * {
+      fill: url(#rg);
+    }
+    
+  }
 }
 
 @media only screen and (max-width: 600px) {
