--- a/src/components/room-page/room-page.pug
+++ b/src/components/room-page/room-page.pug
@@ -6,96 +6,10 @@ include ../../blocks/expandable-checkbox-list/expandable-checkbox-list.pug
 include ../../blocks/little-dropdown/little-dropdown.pug
 include ../../blocks/single-airdatepicker/single-airdatepicker.pug
 include ../../blocks/stars/stars.pug
+include ../sidebar/sidebar.pug
+include ../rooms/rooms.pug
 div(class='settings')
     div(class='settings__container')
-        div(class='sidebar' id='sidebar')
-                a(href='#' class='sidebar__close')
-                    i(class='fa fa-arrow-left')
-                h3(class='sidebar__subtitle') Даты пребывания в отеле
-                div(class='sidebar__datepicker')
-                    +single-datepicker
-                h3(class='sidebar__subtitle') гости
-                div(class='sidebar__dropdown')
-                    +little-dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
-                .flex-row
-                    h3(class='sidebar__subtitle sidebar__subtitle_price') Диапазон цены
-                    input(type='text' class='slider-range-price' id='amount')
-                div(class='sidebar__range')
-                    +range-slider('Стоимость за сутки пребывания в номере')
-                h3(class='sidebar__subtitle sidebar__subtitle_checkboxes') Checkbox Buttons             
-                div(class='sidebar__checkbox')
-                    +checkbox({name:'Smoking', label: 'Можно курить', nameClass: 'sidebar__checkbox'})
-                    +checkbox({ name:'Pets', label:'Можно с питомцами', nameClass: 'sidebar__checkbox'})
-                    +checkbox({name:'Guests',  label:'Можно пригласить гостей (до 10 человек)'})
-                h3(class='sidebar__subtitle sidebar__subtitle_availability') Доступность 
-                div
-                    +checkbox({name:'Широкий коридор',label: 'Широкий коридор', nameClass: 'checkbox', boxClass: 'checkbox__label_descr'})
-                        span(class='checkbox__span') Ширина коридоров в номере не менее 91 см.
-                    +checkbox({name:'Помощник для инвалидов', label:'Помощник для инвалидов',  nameClass: 'checkbox', boxClass: 'checkbox__label_descr'})
-                        span(class='checkbox__span') На 1 этаже вас встретит специалист  и проводит до номера.'
-                h3(class='sidebar__subtitle sidebar__subtitle_comfort') Удобства номера
-                +little-dropdown( {id: 'comfort-button', name: 'Удобства'}, { name:'спальни', number: 'bedroom_text', plus: 'bedroom_plus', minus: 'bedroom_minus'},  {name: 'кровати', number: 'bed_text', plus: 'bed_plus', minus: 'bed_minus' }, {name: 'ванные', number: 'bathroom_text', plus: 'bathroom_plus', minus: 'bathroom_minus'}, {id:'comfort-clean', title: 'очистить'}, {id:'comfort-apply', title: 'применить'})
-                div(class='sidebar__extracomfort')
-                    +expandable-checkbox-list('Дополнительные удобства')
-                        ul(class='sidebar__checkboxes')
-                            li(class='sidebar__checkbox')
-                                +checkbox({name:'Breakfast', label:'Завтрак'})
-                            li(class='sidebar__checkbox')
-                                +checkbox({name:'Table', label:'Письменный стол'})
-                            li(class='sidebar__checkbox')
-                                +checkbox({name:'Chair', label:'Стул для кормления'})
-                            li(class='sidebar__checkbox')
-                                +checkbox({name:'Bed', label:'Кроватка'})
-                            li(class='sidebar__checkbox')
-                                +checkbox({name:'Shampoo', label:'Шампунь'})
-        div(class='rooms')
-            h1(class='rooms__title') Номера, которые мы для вас подобрали
-            span(class='rooms__slide' id='slide')
-                a(href='#')
-                    i(class='fa fa-arrow-right')
-            div(class='rooms__content')
-                    div(class='rooms__card')
-                        +set('luxe')
-                                span люкс
-                        +card-room({ slickName: 'carousel', imgList: [require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg')]},{number: 888,  price: '9  990₽',day: ' в сутки',  feedback: 145, textFeedback:' Отзывов'})
-                            +stars('--rating: 5')
-                            +set('luxe')
-                    div(class='rooms__card')
-                        +card-room({slickName: 'carousel1',  imgList:[require('./images/room2.jpg'), require('./images/room2.jpg'), require('./images/room2.jpg'), require('./images/room2.jpg')]}, {number:840, price: '9  900₽', day:' в сутки', feedback: 65 , textFeedback:' Отзывов'})
-                            +stars('--rating: 4')
-                            +set('luxe')
-                                span люкс
-                    div(class='rooms__card')
-                        +card-room({slickName: 'carousel2', imgList: [require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg')]}, {number: 980, price:  '8 500₽',day: ' в сутки', feedback:35, textFeedback:' Отзывов' })
-                            +stars('--rating: 3')
-                            +set('luxe')
-                    div(class='rooms__card')
-                        +card-room( {slickName:'carousel3', imgList: [require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg')]}, {number:856, price: '7 300₽', day:' в сутки', feedback:19,  textFeedback:' Отзывов'})
-                            +stars('--rating: 5')
-                    div(class='rooms__card')
-                        +card-room( {slickName:'carousel4', imgList: [require('./images/room5.jpg'), require('./images/room5.jpg'), require('./images/room5.jpg'), require('./images/room5.jpg')]}, {number:740, price: '6 000₽',  day:' в сутки', feedback:44, textFeedback:' Отзывов'})
-                            +stars('--rating: 4')
-                    div(class='rooms__card')
-                        +card-room( {slickName:'carousel5', imgList: [require('./images/room6.jpg'), require('./images/room6.jpg'), require('./images/room6.jpg'), require('./images/room6.jpg')]}, {number:982, price: '5 800₽', day:' в сутки', feedback:56, textFeedback:' Отзывов'})
-                            +stars('--rating: 3')
-                    div(class='rooms__card')
-                        +card-room( {slickName:'carousel6', imgList: [require('./images/room7.jpg'), require('./images/room7.jpg'), require('./images/room7.jpg'), require('./images/room7.jpg')]}, {number:678, price: '5 500₽', day:' в сутки', feedback:45, textFeedback:' Отзывов'})
-                            +stars('--rating: 5')
-                    div(class='rooms__card')
-                        +card-room( {slickName:'carousel7', imgList: [require('./images/room8.jpg'), require('./images/room8.jpg'), require('./images/room8.jpg'), require('./images/room8.jpg')]}, {number:450, price: '5 300₽',  day:' в сутки', feedback:39, textFeedback:' Отзывов'})
-                            +stars('--rating: 4')
-                    div(class='rooms__card')
-                        +card-room({slickName:'carousel8',imgList:  [require('./images/room9.jpg'), require('./images/room9.jpg'), require('./images/room9.jpg'), require('./images/room9.jpg')]}, {number:350, price: '5 000₽',  day:' в сутки', feedback:77, textFeedback:' Отзывов'})
-                            +stars('--rating: 3')
-                    div(class='rooms__card')
-                        +card-room({slickName:'carousel9', imgList: [require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg')]},{number: 666, price: '5 000₽', day:' в сутки', feedback:25, textFeedback:' Отзывов'})
-                            +stars('--rating: 5')
-                    div(class='rooms__card')
-                        +card-room({slickName:'carousel10',imgList:  [require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg')]}, {number:444, price: '5 000₽', day:' в сутки', feedback:15, textFeedback:' Отзывов'})
-                            +stars('--rating: 4')
-                    div(class='rooms__card')
-                        +card-room({slickName:'carousel11', imgList: [require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg')]},  {number:352, price: '5 000₽', day:'в сутки', feedback:55, textFeedback:'Отзывов'})
-                            +stars('--rating: 3')
-            div(class='rooms__pagination')
-                +pagination({backButton: 'arrow_back', forwardButton: 'arrow_forward', title: '1 – 12 из 100+ вариантов аренды'})
+        +sidebar
+        +rooms
 hr
